--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="content-wrapper">
         <h2>"Una persona con una idea nueva, es un loco hasta que la idea triunfa"</h2>
     
-        <img src="/logo/logo-white.png" width="400" height="400">
+        <img src="./logo/logo-white.png" width="400" height="400">
     
         <div class="page-wrapper">
           <div class="content-wrapper">
