arreglo de links

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
         <a href="https://drive.google.com/file/d/1mGBtyO-NVXHP09i5GUFzEAGf95yyAGZh/view?usp=share_link" download="">
           <i class="icon fas fa-solid fa-copy fa-2x"></i>
         </a>
-        <a href="https://twitter.com">
+        <a href="https://twitter.com/Danom4ly">
           <i class="icon fab fa-twitter fa-2x"></i>
         </a>
-        <a href="https://github.com/Promenade01">
+        <a href="https://github.com/Danom4ly">
           <i class="icon fab fa-github fa-2x"></i>
         </a>
-        <a href="https://www.youtube.com/@Promenade01">
+        <a href="https://www.youtube.com/@Danom4ly">
           <i class="icon fab fa-youtube fa-2x"></i>
         </a>
-        <a href="https://www.twitch.tv/promenade_">
+        <a href="https://www.twitch.tv/danom4ly">
           <i class="icon fas fa-tv fa-2x"></i>
         </a>
         
