arreglo de links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="mailto:mirandacanelo.daniel@gmail.com">
           <i class="icon fas fa-envelope fa-2x"></i>
         </a>
-        <a href="https://drive.google.com/file/d/1mGBtyO-NVXHP09i5GUFzEAGf95yyAGZh/view?usp=share_link" download="">
+        <a href="https://drive.google.com/file/d/1oqaG_oICuZmWKfLS_4u0zHh08mgR5z8k/view?usp=drive_link" download="">
           <i class="icon fas fa-solid fa-copy fa-2x"></i>
         </a>
         <a href="https://twitter.com/Danom4ly">
